Bug 691724 - The folder view tree aligns with nothing. r+ui-review=andreasn

--- a/mail/themes/qute/mail/folderPane-aero.css
+++ b/mail/themes/qute/mail/folderPane-aero.css
@@ -13,3 +13,7 @@
     color: -moz-hyperlinktext;
   }
 }
+
+#folderTree treechildren::-moz-tree-indentation {
+  width: 8px;
+}
